# neuraltrader

./: .gitignore  ALL_TICKERS_LIST.md  BREAKTHROUGH_PLAN.md  CLEANUP_SUMMARY.md  DATA_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  NEURALTRADER_RENAMED.md  PHASE3_OPTIMIZATION_REPORT.md  PHASE4_RESULTS.md  PHASE5_FINAL_REPORT.md  PHASE_STATUS_REPORT.md  PROJECT_NAMING.md  PROJECT_PLAN.md  README.md  ROADMAP.md  TRADE_CSV_GUIDE.md  analyze_performance.py  demo_system.py  enhanced_trading_engine.py  enhanced_trading_strategy.py  generate_backtest_report.py  main.py  practical_improvements.py  pyproject.toml  quick_improvement_analysis.py  realistic_improvements.py  requirements.txt  run_7am_download.bat  run_constitution_backtest.py  run_ml_backtest.py  run_real_backtest.py  simple_improvement_plan.py  test_enhanced_engine.py  test_tickers.csv
notebooks/: phase2_colab_notebook.ipynb
reports/: advanced_backtest_20260130_150910.xlsx  advanced_backtest_20260130_152519.xlsx  advanced_backtest_20260130_154034.xlsx  advanced_backtest_20260130_155959.xlsx  ai_ensemble_report_20260130_171446.xlsx  ai_ensemble_report_20260130_172957.xlsx  ai_ensemble_report_20260130_182209.xlsx  constitution_backtest_20260130_141956.xlsx  ml_backtest_20260130_143459.xlsx  ml_backtest_20260130_143858.xlsx  ml_backtest_20260130_144235.xlsx  ml_backtest_20260130_144517.xlsx  ml_backtest_20260130_144757.xlsx  project_phase5_trading_engine_20260129_224624.xlsx  test_strategy_report.xlsx  three_way_comparison_20260130_232603.xlsx  three_way_comparison_20260131_000052.xlsx
scripts/: 8am_plan_check.py  (+16 more)
(+342 files in other folders)
